applications/uptime-kuma/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uptime-kuma
spec:
  selector:
    matchLabels:
      app: uptime-kuma
  template:
    metadata:
      labels:
          app: uptime-kuma
    spec:
      containers:
        - name: uptime-kuma
          image: louislam/uptime-kuma:2.0.0-beta.3
          resources:
            limits:
              memory: "64Mi"
              cpu: "100m"
            requests:
              memory: "32Mi"
              cpu: "50m"
          ports:
            - name: http
              containerPort: 3001
              protocol: TCP
          volumeMounts:
            - mountPath: /app/data
              name: storage
          livenessProbe:
            initialDelaySeconds: 180
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
            successThreshold: 1
            exec:
              command:
                - extra/healthcheck
          readinessProbe:
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 1
            failureThreshold: 3
            successThreshold: 1
            httpGet:
              path: /
              port: 3001
              scheme: HTTP
      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: uptime-kuma-pvc
