applications/uptime-kuma/routes.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: uptime-kuma-https
spec:
  parentRefs:
  - name: default-gateway
    namespace: default
  hostnames:
    - kuma.internal.vw-ops.net
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: uptime-kuma
      port: 3001
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: uptime-kuma-redirect
spec:
  parentRefs:
  - name: default-gateway
    namespace: default
    sectionName: http
  hostnames:
  - kuma.internal.vw-ops.net
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        statusCode: 301
